k8s/minio.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
        - /bin/bash
        - -c
        args: 
        - minio server /data --console-address :9001
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "250m"
            memory: "200Mi"
          requests:
            cpu: "250m"
            memory: "200Mi"
        ports:
        - containerPort: 9000
          name: http
        - containerPort: 9001
          name: console
        volumeMounts:
        - name: minio-data
          mountPath: /data
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  selector:
    app: minio
  ports:
  - name: http
    port: 9000
    targetPort: http
  - name: console
    port: 9001
    targetPort: console
  type: ClusterIP
